sql/sql_table.cc
@@ -1330,6 +1330,12 @@ static int mysql_admin_table(THD* thd, TABLE_LIST* tables,
       net_store_data(packet, "Operation failed");
       break;
 
+    case HA_ADMIN_REJECT:
+      net_store_data(packet,"status");
+      net_store_data(packet,"Operation need committed state");
+      open_for_modify= false;
+      break;
+
     case HA_ADMIN_ALREADY_DONE:
       net_store_data(packet, "status");
       net_store_data(packet, "Table is already up to date");
